updated with conditions in python

--- a/pythonbasics.ipynb
+++ b/pythonbasics.ipynb
@@ -862,6 +862,418 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expressions\n",
+    "variable_name = something (Value)\n",
+    "\n",
+    "variable_name = operation e.g x = 1 + 1; x = x + 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Sally Peter'\n",
+    "age = 19\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is Sally and I am 19 years old.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = \"My name is Sally and I am 19 years old.\"\n",
+    "sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is Sally Peter and I am 19 years old.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence1 = \"My name is {} and I am {} years old.\".format(name, age)\n",
+    "sentence1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is Sally Peter and I am 19 years old.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"My name is {name} and I am {age} years old.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Sally Peter and I am 19 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is {} and I am {} years old.\".format(name, age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello David! How are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = input(\"Enter your name: \")\n",
+    "print(f\"Hello {user_name}! How are you?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conditional Statements\n",
+    "- Logical operators\n",
+    "\n",
+    "- **if this do that**\n",
+    "\n",
+    "\n",
+    "if(condition):\n",
+    "\n",
+    "\n",
+    "- **if else**\n",
+    "\n",
+    "if (condition):\n",
+    "\n",
+    " -- do something\n",
+    "\n",
+    "else:\n",
+    "\n",
+    " -- do this one\n",
+    "\n",
+    "\n",
+    "- **if else if**\n",
+    "\n",
+    "if (condition):\n",
+    "\n",
+    " -- do this\n",
+    "\n",
+    "elif (condition 2):\n",
+    "\n",
+    " -- do this one\n",
+    "\n",
+    "...\n",
+    "\n",
+    "else:\n",
+    "\n",
+    " -- default to this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"Sally\") == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Awesome! You guessed correct.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = \"John\"\n",
+    "your_guess  = input(\"Guess my name: \")\n",
+    "\n",
+    "if my_name == your_guess:\n",
+    "    print(\"Awesome! You guessed correct.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Awesome! You guessed correct.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if name == input(\"Guess my name: \"):\n",
+    "    print(\"Awesome! You guessed correct.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oh ohh... you are not correct!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if my_name == input(\"Guess my name: \"):\n",
+    "    print(\"Awesome! You guessed correct.\")\n",
+    "else:\n",
+    "    print(\"oh ohh... you are not correct!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = eval(input(\"Enter a number: \"))\n",
+    "\n",
+    "if num%2 == 0:\n",
+    "    print(f\"{num} is even\")\n",
+    "elif num%2 == 1:\n",
+    "    print(\"{} is odd\".format(num))\n",
+    "else:\n",
+    "    print(\"{} is not a number!!!\".format(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 is a small positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = eval(input(\"Enter a number: \"))\n",
+    "\n",
+    "if num <= 0:\n",
+    "    print(f\"{num} is negative\")\n",
+    "elif num >= 0 and num <= 1000:\n",
+    "    print(\"{} is a small positive number\".format(num))\n",
+    "else:\n",
+    "    print(\"{} is a large positive number\".format(num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "70 and above -- A\n",
+    "\n",
+    "69 - 60 -- B\n",
+    "\n",
+    "59 - 50 -- C\n",
+    "\n",
+    "49 - 40 -- D\n",
+    "\n",
+    "39 - 30 -- E\n",
+    "\n",
+    "29 - 0 --  F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have an F\n"
+     ]
+    }
+   ],
+   "source": [
+    "grade = float(input(\"Enter your grade: \"))\n",
+    "\n",
+    "if grade >= 70:\n",
+    "    print(\"You have an A!\")\n",
+    "elif grade <= 69 and grade >= 60:\n",
+    "    print(\"You have a B!\")\n",
+    "elif grade <= 59 and grade >= 50:\n",
+    "    print(\"You have a C!\")\n",
+    "elif grade <= 49 and grade >= 40:\n",
+    "    print(\"You have a D!\")\n",
+    "elif grade <= 39 and grade >= 30:\n",
+    "    print(\"You have a E!\")\n",
+    "else:\n",
+    "    print(\"You have an F\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_ = input(\"Enter a year: \")\n",
+    "\n",
+    "if year_%4 == 0:\n",
+    "    print(\"{} is a leap year\".format(year_))\n",
+    "elif year_%100 == 0 and year_ % 400 == 0:\n",
+    "    print(\"{} is a leap year\".format(year_))\n",
+    "else:\n",
+    "    print(f\"{year_} is not a leap year!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_ = input(\"Enter a year: \")\n",
+    "\n",
+    "if year_%4 == 0 or (year_%100 == 0 and year_ % 400 == 0):\n",
+    "    print(\"{} is a leap year\".format(year_))\n",
+    "else:\n",
+    "    print(f\"{year_} is not a leap year!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Password Checker\n",
+    "\n",
+    "- alpha\n",
+    "- num\n",
+    "- special characters\n",
+    "- uppercase\n",
+    "- at least 8\n",
+    "\n",
+    "Password is weak if\n",
+    "- less than 8 characters\n",
+    "\n",
+    "password is strong if\n",
+    "- 8 or more characters\n",
+    "- and has numbers\n",
+    "\n",
+    "password is very strong if\n",
+    "- 8 or more characters\n",
+    "- has numbers\n",
+    "- has an uppercase character\n",
+    "- a special character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salvation.1234-234 is a very strong password\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = input(\"Enter your password: \")\n",
+    "\n",
+    "if len(password) < 8:\n",
+    "    print(f\"{password} is a weak password\")\n",
+    "elif len(password)>8 and password.isalnum():\n",
+    "    print(f\"{password} is a strong password\")\n",
+    "else:\n",
+    "    print(f\"{password} is a very strong password\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -871,7 +1283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -885,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
