--- a/titanicvisuals.ipynb
+++ b/titanicvisuals.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "filepath = r\"C:\\Users\\esltpae\\Downloads\\titanic\"\n",
+    "filepath = r\"C:\\Users\\replace\\Downloads\\titanic\" #Replace this with your own filepath\n",
     "data = pd.read_csv(filepath + \"\\\\\" + \"train.csv\")\n",
     "data.head()"
    ]
